Bug 868302 - Enable rooting LIFO assertions in DEBUG, r=terrence